--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.3.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/data-grid": "^4.0.0-alpha.15",
     "@material-ui/icons": "^4.11.2",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
+    "js-cookie": "^2.2.1",
     "locate-path": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
