Created statistics dashboard for postings

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-feather": "^2.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "recharts": "^2.0.9",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
