--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "locate-path": "^6.0.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-sticky-box": "^0.9.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
