--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "dependencies": {
     "@auth0/auth0-react": "^1.3.0",
     "@date-io/date-fns": "1.x",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.2",
     "@material-ui/data-grid": "^4.0.0-alpha.15",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.2",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.9.4",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "dotenv": "^16.0.3",
     "locate-path": "^6.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
